--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLearningEnglish">
-        <activity android:name=".activities.TopicActivity"></activity>
+        <activity android:name=".activities.WordsListActivity"></activity>
+        <activity android:name=".activities.TopicActivity" />
         <activity android:name=".activities.MainScreenActivity" />
+        <activity android:name=".activities.WordActivity" />
         <activity android:name=".activities.SignInSuccessfulActivity" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.LoginActivity">
