--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyLearningEnglish">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".activities.FourAnswerExerciseActivity"></activity>
         <activity
             android:name=".activities.FillBlankExerciseActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activities.ExercisesListActivity" />
-        <activity android:name=".activities.WordsListActivity" />
+        <activity android:name=".activities.ExercisesListActivity"
+            android:parentActivityName=".activities.TopicActivity"/>
+        <activity android:name=".activities.WordsListActivity"
+            android:parentActivityName=".activities.TopicActivity"/>
         <activity android:name=".activities.TopicActivity" />
         <activity android:name=".activities.MainScreenActivity" />
         <activity android:name=".activities.WordActivity" />
-        <activity android:name=".activities.SignUpActivity" />
-        <activity android:name=".activities.LoginActivity">
+        <activity android:name=".activities.SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
